...

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_previous_recipe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="0.4"
                        android:text="@string/previous_recipe" />

...
                        android:layout_margin="4dp"
                        android:layout_weight="0.4"
                        android:text="@string/next_recipe" />
                </LinearLayout>

                <TextView
                    android:id="@+id/label_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient_list"
                    android:textSize="22sp" />

                <android.support.v7.widget.CardView
...
