<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.recipeslist.MainActivity">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/progress_layout_margin"
            android:layout_marginEnd="@dimen/progress_layout_margin"
            android:layout_marginStart="@dimen/progress_layout_margin"
            android:layout_marginTop="@dimen/progress_layout_margin"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recycler_recipe"
            app:layout_constraintStart_toStartOf="@+id/recycler_recipe"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

        </android.support.v7.widget.RecyclerView>


    </android.support.constraint.ConstraintLayout>

</layout>